# aoc2022

./: CHANGELOG.md  Makefile  README.md  aoc2022.cabal
app/: Main.hs
data/: Day11.txt
src/: Aoc2022.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Geometry.hs  ParserUtils.hs
test/: Spec.hs
test/Tests/: Day01.hs  Test01.hs  Test02.hs  Test03.hs  Test04.hs  Test05.hs  Test06.hs  Test07.hs  Test08.hs  Test09.hs  Test10.hs  Test11.hs  Test12.hs  Test13.hs  Test14.hs  Test15.hs  Test16.hs  Test17.hs  Test18.hs  Test19.hs  Test20.hs  Test21.hs  Test22.hs  Test23.hs  Test24.hs  Test25.hs
