cabal-version:       2.4
name:                aoc2022
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/ssedgwick/aoc2022
bug-reports:         https://github.com/ssedgwick/aoc2022/issues
license:             MIT
license-file:        LICENSE
author:              Scott Sedgwick
maintainer:          Scott Sedgwick <ssedgwick@cochlear.com>
copyright:           2022 Scott Sedgwick
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/ssedgwick/aoc2022.git

common common-options
  build-depends:       base
                     , text
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Day01

executable aoc2022
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       aoc2022
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite aoc2022-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       aoc2022
                     , hspec
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
