cabal-version:       2.4
name:                aoc2022
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/ssedgwick/aoc2022
bug-reports:         https://github.com/ssedgwick/aoc2022/issues
license:             MIT
license-file:        LICENSE
author:              Scott Sedgwick
maintainer:          Scott Sedgwick <ssedgwick@cochlear.com>
copyright:           2022 Scott Sedgwick
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.6.1

source-repository head
  type:                git
  location:            https://github.com/ssedgwick/aoc2022.git

common common-options
  build-depends:       base 
                     , array
                     , containers
                     , data-clist
                     , deepseq
                     , hashable
                     , lens
                     , matrix
                     , monad-loops
                     , parallel
                     , parsec
                     , safe
                     , search-algorithms
                     , split
                     , text
                     , time
                     , trifecta
                     , unordered-containers
                     , vector
  default-language:    GHC2021
  default-extensions:  DerivingStrategies
                     , OverloadedStrings
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     ParserUtils
                     , Geometry
                     , Search
                     , Day01
                     , Day02
                     , Day03
                     , Day04
                     , Day05
                     , Day06
                     , Day07
                     , Day08
                     , Day09
                     , Day10
                     , Day11
                     , Day12
                     , Day13
                     , Day14
                     , Day15
                     , Day16
                     , Day17
                     , Day18
                     , Day19
                     , Day20
                     , Day21
                     , Day22
                     , Day23
                     , Day24
                     , Day25

executable aoc2022
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       aoc2022
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite aoc2022-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Tests.Test01
                     , Tests.Test02
                     , Tests.Test03
                     , Tests.Test04
                     , Tests.Test05
                     , Tests.Test06
                     , Tests.Test07
                     , Tests.Test08
                     , Tests.Test09
                     , Tests.Test10
                     , Tests.Test11
                     , Tests.Test12
                     , Tests.Test13
                     , Tests.Test14
                     , Tests.Test15
                     , Tests.Test16
                     , Tests.Test17
                     , Tests.Test18
                     , Tests.Test19
                     , Tests.Test20
                     , Tests.Test21
                     , Tests.Test22
                     , Tests.Test23
                     , Tests.Test24
                     , Tests.Test25
  build-depends:       aoc2022
                     , hspec ^>= 2.10.6
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
